--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,16665],[],[[4,0,0,[],[0,53,16610,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,21695],[],[[4,0,0,[],[1,93,21600],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Item","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type/item.robot","*Document/Auto%20Tester/TourMaster/Program/Item_Type/item.robot","*TC01 - Check Item Type Page","*Element 'xpath=//*[@id=\"rc-menu-uuid-68547-1-SETTING_PROGRAM-popup\"]/li[2]/span' not visible after 5 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login&amp;Search","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3/Login&amp;Search.robot","*Document/Auto%20Tester/P%27Beam/Homework3/Login%26Search.robot","*Tc02 - Search Page"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:17","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:17","fail":1,"id":"s1","label":"Item","name":"Item","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:22","fail":0,"id":"s1","label":"Login&amp;Search","name":"Login&amp;Search","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1714963851825;
+window.output["baseMillis"] = 1714983351951;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16669;
+window.output["generated"] = 21701;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
