--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,29545],[],[[4,0,0,[],[1,70,29473],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,30072],[],[[4,0,0,[],[1,87,29984],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Item","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type/item.robot","*Document/Auto%20Tester/TourMaster/Program/Item_Type/item.robot","*TC07 - Check Pagination"]);
+window.output["strings"] = window.output["strings"].concat(["*","*GroupType","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle/Group_Type/GroupType.robot","*Document/Auto%20Tester/TourMaster/Vehicle/Group_Type/GroupType.robot","*TC06 - Check Pagination"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"Item","name":"Item","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"GroupType","name":"GroupType","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1715058474422;
+window.output["baseMillis"] = 1715080359409;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 29548;
+window.output["generated"] = 30075;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
