--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,30087],[[4,5,6,0,[],[1,9,30078],[[7,8,9,0,[],[1,10,30076],[[10,11,12,0,[],[1,10,30075],[[13,14,15,0,[],[1,11,30074],[[16,17,18,0,[],[1,11,30073],[[19,20,21,0,[],[1,12,30072],[],[[22,0,0,[],[1,83,30000],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,30590],[[4,5,6,0,[],[1,7,30582],[[7,8,9,0,[],[1,8,30581],[[10,11,12,0,[],[1,9,30580],[[13,14,15,0,[],[1,9,30579],[[16,17,18,0,[],[1,10,30578],[[19,20,21,0,[],[1,10,30577],[],[[22,0,0,[],[1,77,30509],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*Program","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program","*../Document/Auto%20Tester/TourMaster/Program","*Item Type","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type","*../Document/Auto%20Tester/TourMaster/Program/Item_Type","*Item","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type/item.robot","*../Document/Auto%20Tester/TourMaster/Program/Item_Type/item.robot","*TC07 - Check Pagination"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*Vehicle","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle","*../Document/Auto%20Tester/TourMaster/Vehicle","*Group Type","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle/Group_Type","*../Document/Auto%20Tester/TourMaster/Vehicle/Group_Type","*GroupType","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle/Group_Type/GroupType.robot","*../Document/Auto%20Tester/TourMaster/Vehicle/Group_Type/GroupType.robot","*TC06 - Check Pagination"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:30","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:30","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program","name":"Program","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Item Type","name":"Item Type","pass":1,"skip":0},{"elapsed":"00:00:30","fail":0,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Item Type.Item","name":"Item","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:31","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:31","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:31","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:31","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:31","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":1,"skip":0},{"elapsed":"00:00:31","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Vehicle","name":"Vehicle","pass":1,"skip":0},{"elapsed":"00:00:31","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Vehicle.Group Type","name":"Group Type","pass":1,"skip":0},{"elapsed":"00:00:31","fail":0,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Vehicle.Group Type.GroupType","name":"GroupType","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1715058474409;
+window.output["baseMillis"] = 1715080358467;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 30090;
+window.output["generated"] = 30593;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
