--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,55778],[[4,5,6,0,[],[1,11,55767],[[7,8,9,0,[],[1,11,55766],[[10,11,12,0,[],[1,12,55765],[[13,14,15,0,[],[1,13,55764],[[16,17,18,0,[],[1,13,55762],[[19,20,21,0,[],[1,14,55761],[],[[22,0,0,[],[1,67,55707],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,23576],[[4,5,6,0,[],[0,11,23564],[[7,8,9,0,[],[0,12,23563],[[10,11,12,0,[],[0,13,23563],[[13,14,15,0,[],[0,13,23562],[[16,17,18,0,[],[0,14,23561],[[19,20,21,0,[],[0,14,23559],[],[[22,0,0,[],[0,72,23501,23],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*Program","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program","*../Document/Auto%20Tester/TourMaster/Program","*Item Type","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type","*../Document/Auto%20Tester/TourMaster/Program/Item_Type","*Item","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Program/Item_Type/item.robot","*../Document/Auto%20Tester/TourMaster/Program/Item_Type/item.robot","*TC03 - Check Create Item Type Page for 10 sub"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*TourMaster","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster","*../Document/Auto%20Tester/TourMaster","*Vehicle","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle","*../Document/Auto%20Tester/TourMaster/Vehicle","*Own vehicle","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle/Own_vehicle","*../Document/Auto%20Tester/TourMaster/Vehicle/Own_vehicle","*Ownvehicle","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/TourMaster/Vehicle/Own_vehicle/Ownvehicle.robot","*../Document/Auto%20Tester/TourMaster/Vehicle/Own_vehicle/Ownvehicle.robot","*TC06 - Check Pagination","*Element 'xpath=//*[@id=\"rc_select_12_list_1\"]' not visible after 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:56","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:56","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:00:56","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:00:56","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:00:56","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":1,"skip":0},{"elapsed":"00:00:56","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program","name":"Program","pass":1,"skip":0},{"elapsed":"00:00:56","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Item Type","name":"Item Type","pass":1,"skip":0},{"elapsed":"00:00:56","fail":0,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Program.Item Type.Item","name":"Item","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:24","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:24","fail":1,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":0,"skip":0},{"elapsed":"00:00:24","fail":1,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":0,"skip":0},{"elapsed":"00:00:24","fail":1,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":0,"skip":0},{"elapsed":"00:00:24","fail":1,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster","name":"TourMaster","pass":0,"skip":0},{"elapsed":"00:00:24","fail":1,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Vehicle","name":"Vehicle","pass":0,"skip":0},{"elapsed":"00:00:24","fail":1,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Vehicle.Own vehicle","name":"Own vehicle","pass":0,"skip":0},{"elapsed":"00:00:24","fail":1,"id":"s1-s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.TourMaster.Vehicle.Own vehicle.Ownvehicle","name":"Ownvehicle","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1715082457485;
+window.output["baseMillis"] = 1715252193695;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 55783;
+window.output["generated"] = 23578;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
