--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,182427],[],[[4,0,0,[],[1,87,182338],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,230031],[],[[4,0,0,[],[1,57,229972],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login&amp;Search","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3/Login&amp;Search.robot","*Document/Auto%20Tester/P%27Beam/Homework3/Login%26Search.robot","*Tc01 - Search Page"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login&amp;Search","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3/Login&amp;Search.robot","*Document/Auto%20Tester/P%27Beam/Homework3/Login%26Search.robot","*Tc04 - Add User Fail"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:03:02","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:03:02","fail":0,"id":"s1","label":"Login&amp;Search","name":"Login&amp;Search","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:03:50","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:03:50","fail":0,"id":"s1","label":"Login&amp;Search","name":"Login&amp;Search","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1716807186792;
+window.output["baseMillis"] = 1716964436591;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 182452;
+window.output["generated"] = 230059;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
