--- a/results/report.html
+++ b/results/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,182236],[[4,5,6,0,[],[1,8,182228],[[7,8,9,0,[],[1,9,182227],[[10,11,12,0,[],[1,9,182226],[[13,14,15,0,[],[1,10,182224],[[16,17,18,0,[],[1,11,182222],[],[[19,0,0,[],[1,60,182170],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,228787],[[4,5,6,0,[],[1,8,228779],[[7,8,9,0,[],[1,9,228777],[[10,11,12,0,[],[1,9,228776],[[13,14,15,0,[],[1,10,228773],[[16,17,18,0,[],[1,11,228771],[],[[19,0,0,[],[1,87,228692],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*P'Beam","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam","*../Document/Auto%20Tester/P%27Beam","*Homework3","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3","*../Document/Auto%20Tester/P%27Beam/Homework3","*Login&amp;Search","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3/Login&amp;Search.robot","*../Document/Auto%20Tester/P%27Beam/Homework3/Login%26Search.robot","*Tc01 - Search Page"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automate HUi","*/Users/tester/Desktop/Automate HUi","*..","*Document","*/Users/tester/Desktop/Automate HUi/Document","*../Document","*Auto Tester","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester","*../Document/Auto%20Tester","*P'Beam","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam","*../Document/Auto%20Tester/P%27Beam","*Homework3","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3","*../Document/Auto%20Tester/P%27Beam/Homework3","*Login&amp;Search","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3/Login&amp;Search.robot","*../Document/Auto%20Tester/P%27Beam/Homework3/Login%26Search.robot","*Tc04 - Add User Fail"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:03:02","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:03:02","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:03:02","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:03:02","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:03:02","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam","name":"P'Beam","pass":1,"skip":0},{"elapsed":"00:03:02","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam.Homework3","name":"Homework3","pass":1,"skip":0},{"elapsed":"00:03:02","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam.Homework3.Login&amp;Search","name":"Login&amp;Search","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:03:49","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:03:49","fail":0,"id":"s1","label":"Automate HUi","name":"Automate HUi","pass":1,"skip":0},{"elapsed":"00:03:49","fail":0,"id":"s1-s1","label":"Automate HUi.Document","name":"Document","pass":1,"skip":0},{"elapsed":"00:03:49","fail":0,"id":"s1-s1-s1","label":"Automate HUi.Document.Auto Tester","name":"Auto Tester","pass":1,"skip":0},{"elapsed":"00:03:49","fail":0,"id":"s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam","name":"P'Beam","pass":1,"skip":0},{"elapsed":"00:03:49","fail":0,"id":"s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam.Homework3","name":"Homework3","pass":1,"skip":0},{"elapsed":"00:03:49","fail":0,"id":"s1-s1-s1-s1-s1-s1","label":"Automate HUi.Document.Auto Tester.P'Beam.Homework3.Login&amp;Search","name":"Login&amp;Search","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1716807186972;
+window.output["baseMillis"] = 1716964436539;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 182268;
+window.output["generated"] = 228808;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
