--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,230031],[],[[4,0,0,[],[1,57,229972],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,32461],[],[[4,0,5,[],[0,121,32337,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login&amp;Search","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3/Login&amp;Search.robot","*Document/Auto%20Tester/P%27Beam/Homework3/Login%26Search.robot","*Tc04 - Add User Fail"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login&amp;Search","*/Users/tester/Desktop/Automate HUi/Document/Auto Tester/P'Beam/Homework3/Login&amp;Search.robot","*Document/Auto%20Tester/P%27Beam/Homework3/Login%26Search.robot","*Tc02 - Check Search Page","*<p>ทดสอบปุ่ม Clear และตรวจสอบหน้าต่างของ Search Page\x3c/p>","*Element 'xpath=/html/body/div[3]/div[3]/ul/li/svg' not visible after 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:03:50","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:03:50","fail":0,"id":"s1","label":"Login&amp;Search","name":"Login&amp;Search","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:32","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:32","fail":1,"id":"s1","label":"Login&amp;Search","name":"Login&amp;Search","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1716964436591;
+window.output["baseMillis"] = 1717057004665;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 230059;
+window.output["generated"] = 32472;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
